# COMP6216-Swaying-Swarms

./: .clang-format  .env  .gitignore  CLAUDE.md  CMakeLists.txt  README.md  ToDo.md  config.ini  context.md  master_plan_shielded_readme.md  ralph.sh  report.md
.claude/: settings.json
.claude/agents/: changelog-scribe.md  code-reviewer.md  cpp-builder.md  debugger.md  ecs-architect.md  orchestrator.md
.claude/commands/: build.md  fix-issue.md  record-mistake.md  record-process.md  review.md  test.md
.claude/hooks/: record-mistake.sh  record-process.sh  task-completed.sh  update-changelog.sh
.claude/skills/flecs-patterns/: SKILL.md
.orchestrator/: active-tasks.md  context.md  decisions.md  mistakes.md  plan.md  state.md  task-queue.md
.orchestrator/inbox/: debugger-spatialgrid-fix.md
docs/: boid_model_reference.md  current-task.md  performance_analysis.md  ralph-log.md
include/: CLAUDE.md  changelog.md  components.h  config_loader.h  render_state.h  spatial_grid.h
scripts/: README.md  load-env.sh  update-env.sh
src/: main.cpp
src/ecs/: CLAUDE.md  changelog.md  spatial_grid_stub.cpp  spawn.cpp  spawn.h  stats.cpp  stats.h  systems.cpp  systems.h  systems_infection.cpp  systems_lifecycle.cpp  systems_render_sync.cpp  systems_reproduction.cpp  systems_steering.cpp  world.cpp  world.h
src/render/: CLAUDE.md  changelog.md  render_config.h  render_demo.cpp  renderer.cpp  renderer.h
src/sim/: CLAUDE.md  aging.cpp  aging.h  changelog.md  config_loader.cpp  cure.cpp  cure.h  death.cpp  death.h  infection.cpp  infection.h  promotion.cpp  promotion.h  reproduction.cpp  reproduction.h  rng.h
src/spatial/: CLAUDE.md  changelog.md  spatial_grid.cpp
tests/: test_antivax.cpp  test_config_loader.cpp  test_cure.cpp  test_spatial.cpp
